# rust-codegen-test

./: .gitignore
minijinja/: Cargo.toml
minijinja/codegen/: Cargo.toml
minijinja/codegen/configs/: arc.toml  array.toml
minijinja/codegen/src/: main.rs
minijinja/codegen/templates/: definitions.jinja
minijinja/codegen/templates/src/: arc.rs  mod.rs
minijinja/src/arc/: mod.rs
minijinja/src/array/: mod.rs
