[package]
name = "codegen"
version = "0.1.0"
edition = "2024"
publish = false

# TODO: feature "watch" (active by default, not needed on CI)

[dependencies]
minijinja = { version = "2.14", default-features = false, features = ["deserialization", "loader"]}
notify = "8.2"
#rtrb = { path = ".." }
rtrb = "0.3"
serde = "1"
toml = "0.9"
